--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <meta name="theme-color" content="#b2292e">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Agency Real Estate and Property Management</title>
   </head>
